apep_0049/v2/REPLICATION.md
# Replication Package: apep_0129

This folder contains all code and data needed to replicate the analysis.

## Requirements

- Python 3.10+
- Required packages: See below (or `requirements.txt` if present)

```bash
pip install pandas numpy statsmodels matplotlib
```

## Data

Data is fetched from the Census PUMS API (no API key required for basic queries).

**Cached data files:**
- `acs_outcomes_2016_2020.csv`
- `balance_test.csv`
- `bandwidth_sensitivity.csv`
- `mccrary_test.csv`
- `placebo_thresholds.csv`
- `rdd_results.csv`
- `ua_analysis.csv`
- `ua_census_2010.csv`

## Code

**Scripts (run in order):**
- `00_packages.R`
- `01_fetch_data.R`
- `02_fetch_ua_characteristics.R`
- `03_main_analysis.R`
- `04_figures.R`
- `05_first_stage_figure.R`

## Replication Instructions

1. Install requirements:
   ```bash
   pip install pandas numpy statsmodels matplotlib
   # For R scripts: install.packages(c("did", "fixest", "ggplot2"))
   ```

2. Run the analysis scripts in order:
   ```bash
   cd code/
   # For Python scripts:
   python 01_fetch_data.py    # Downloads data
   python 02_analysis.py      # Runs main analysis
   python 03_figures.py       # Generates figures
   
   # For R scripts:
   Rscript 01_fetch_data.R
   Rscript 02_analysis.R
   Rscript 03_figures.R
   ```

3. Scripts are numbered in execution order (01_, 02_, etc.).

## Data Source

Census PUMS (Public Use Microdata Sample)
- API: https://api.census.gov/data/{YEAR}/acs/acs1/pums
- Documentation: https://www.census.gov/programs-surveys/acs/microdata.html
- No API key required for basic queries

## Notes

- Scripts may contain hardcoded paths that need adjustment
- Cached JSON files allow replication without re-downloading
- For full replication from scratch, delete JSON files and re-run fetch scripts

---
Generated by APEP publish_paper.py
